# red-sea-race

./: .firebaserc  .gitignore  Cargo.toml  Makefile.toml  README.md  firebase.json  package-lock.json  package.json
.github/workflows/: build.yml
_static/: index.html  styles.css
_static/media/images/bg/: bg_items.json
_static/media/images/characters/: egyptian_ske.json  egyptian_tex.json  israelite_ske.json  israelite_tex.json
_static/media/images/gameobjects/: gameobjects.xml
_static/media/images/main-menu/: buttons_and_headers.xml
_static/media/shaders/: fragment.glsl  vertex.glsl
_static/media/xml/: runner.xml
src/: camera.rs  components.rs  config.rs  dom_events.rs  entities.rs  geometry.rs  lib.rs  loader.rs  media.rs  path.rs  renderer.rs  router.rs  systems.rs  texture.rs  tick.rs  util.rs  world.rs
src/components/: animation.rs  animations.rs  bg.rs  characters.rs  controller.rs  mod.rs  physics.rs  renderable.rs  sprites.rs
src/components/tweens/: events.rs  lerp.rs  lookup.rs  mod.rs  player.rs  targets.rs  tests.rs  timeline.rs
src/dom/: events.rs  mod.rs  router.rs
src/dragonbones/: README.md  animation.rs  bones.rs  data.rs  dragonbones_entities.rs  entities.rs  loader.rs  mod.rs  skin.rs  spawner.rs  tests.rs
src/entities/: bg.rs  init.rs  mod.rs
src/entities/init/: bg_init.rs  character_init.rs  mod.rs
src/geometry/: bounds.rs  data.rs  mod.rs  upload.rs
src/media/: data.rs  loader.rs  mod.rs
src/systems/: animation.rs  begin.rs  bg.rs  controller.rs  draw.rs  end.rs  mod.rs  motion.rs  remove.rs  tweens.rs
src/systems/update/: animation.rs  bg.rs  mod.rs  remove.rs  spawn.rs
src/textures/: data.rs  loader.rs  mod.rs  uvs.rs
