[package]
name = "app"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"
wasm-bindgen-futures= "0.4.10"
futures = "0.3.4"
gloo-events = "0.1.1"
awsm_web = { version = "0.1.9", features = ["tick", "webgl", "loaders", "audio"], default-features = false }
wee_alloc = { version = "0.4.5", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
derive_deref = "1.1.0"
cfg-if = "0.1.10"
log = "0.4.8"
lazy_static = "1.4.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
shipyard = { version = "0.3.3", features = ["proc", "non_send", "non_sync"], default-features = false }
shipyard_scenegraph = { version = "0.1.5", features = ["proc", "non_send", "non_sync", "easy_deref", "nalgebra_transforms"], default-features = false }
# shipyard_scenegraph = { path="../../dakom/shipyard-scenegraph/crate", features = ["proc", "non_send", "non_sync", "easy_deref", "nalgebra_transforms"], default-features = false }
thiserror = "1.0.14"
nalgebra = "0.20.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_repr = "0.1.5"
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.51"

[dependencies.web-sys]
version = "0.3.37"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "Node",
    "Window",
    "Performance",

]
[features]
default = ["wee_alloc"]
dev = ["wee_alloc", "wasm-logger", "console_error_panic_hook"]
quiet = []
